--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -898,6 +898,8 @@
 
 <li>  <i>During a campaign, do [bless] and [curse] tokens remain in the chaos bag from scenario to scenario?</i> No, [bless] and [curse] tokens do not carry over from scenario to scenario.</li>
 
+<li>  <i>When exactly are [bless] and [curse] tokens removed from the chaos bag? Are they still present in the chaos bag during the resolution of a scenario?</i> [bless] and [curse] tokens should be removed from the chaos bag when the game is cleaned up after the resolution of a scenario. This occurs before moving onto any subsequent story interludes, unless otherwise noted. - FAQ, v.2.0, August 2022</li>
+
 </ol>
 
 <h3 id="Frost_Tokens" style="color:red">Frost Tokens (added in <em>Edge of the Earth</em>)</h3>
@@ -1551,6 +1553,14 @@
 <li>  For the purposes of card effects, both partially flooded locations and fully flooded locations are considered to be "flooded."</li>
 
 </ul>
+
+<p><span style="color:blue">(Added in FAQ, section 'Frequently Asked Questions')</span> <b>Frequently asked Flood questions:</b></p>
+
+<ol>
+
+<li>  <i>If an investigator starts their turn at a fully flooded location, enters an unrevealed location with no flood token, and that location becomes flooded "after it is revealed," does the investigator still "struggle for air?" Or does this count as entering an unflooded location?</i> Technically the investigator has entered an unflooded location, which then became flooded after it was revealed, so they would not struggle for air.</li>
+
+</ol>
 
 <h2 id="For_Each_Or_For_Every" style="color:blue">"For each" or "for every" (added in FAQ, section 'Card Ability Interpretation', point 2.23)</h2>
 
