--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -1648,7 +1648,7 @@
 
 <li>  While a hidden enemy is in your hand, it is not considered to be engaged with you or in your threat area, and it does not attack unless otherwise specified. However, its constant abilities are active, and abilities on it can be triggered, but only by you.</li>
 
-<li>  A hidden card counts toward your hand size, but it cannot be discarded from your hand by any means except those described on the card. When discarded, a hidden card is placed in its appropriate discard pile.</li>
+<li>  A hidden card counts toward your hand size, but it cannot leave your hand by any means except those described on the card.</li>
 
 </ul>
 
@@ -2117,6 +2117,8 @@
 <li>  A card with the permanent keyword starts each game in play and is not shuffled into your investigator deck during setup.</li>
 
 <li>  A card with the permanent keyword cannot leave play (except by elimination).</li>
+
+<li>  Once added to your deck, permanent cards cannot be removed from your deck or swapped out of your deck unless explicitly stated otherwise.</li>
 
 </ul>
 
