--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -84,6 +84,8 @@
 	<li><a href="#Choices_and_the_Grim_Rule">Choices, and the Grim Rule</a></li>
 	<li><a href="#Clues">Clues</a></li>
 	<li><a href="#Collection">Collection</a></li>
+	<li><a href="#Concealed_X">Concealed X</a></li>
+	<li><a href="#Concealed_Mini_Cards">Concealed Mini-Cards</a></li>	
 	<li><a href="#Constant_Abilities">Constant Abilities</a></li>
 	<li><a href="#Control">Control</a></li>
 	<li><a href="#Copy">Copy</a></li>
@@ -152,6 +154,7 @@
 	<li><a href="#Investigator_Deck">Investigator Deck</a></li>
 	<li><a href="#Joes_Hunch_Deck">Joe's "Hunch Deck"</a></li>
 	<li><a href="#Keys">Keys</a></li>
+	<li><a href="#Keys2">Keys (Cardtype)</a></li>
 	<li><a href="#Keywords">Keywords</a></li>
 	<li><a href="#Killed_Insane_Investigators">Killed/Insane Investigators</a></li>
 	<li><a href="#Lasting_Effects">Lasting Effects</a></li>
@@ -968,6 +971,60 @@
 
 <p><em>Example: Sean and Etienne are each using a deck built from Sean's collection. If Etienne is instructed to "search the collection," he searches Sean's collection.</em></p>
 
+<h2 id="Concealed_X" style="color:red">Concealed X (added in <em>The Scarlet Keys</em>)</h2>
+
+<p>Concealed X is a keyword that appears on some enemy cards in <i>The Scarlet Keys</i> campaign. Concealed enemies represent hidden enemies whose true location is a mystery until the investigators work to expose where - and in some cases, who - they truly are.</p>
+
+<p>When a scenario includes one or more concealed enemies, investigators are instructed to set aside several concealed mini-cards. These mini-cards are double-sided. The facedown side represents the possible location of a concealed enemy. The revealed side reveals the mini-card’s true nature - an enemy’s true location, or simply a decoy.</p>
+
+<p>When an investigator draws an enemy with the concealed X keyword (or is instructed to resolve an enemy’s concealed keyword), they spawn that enemy into a game area above the agenda deck, not at any location. This area is called "the shadows," and represents enemies the investigators know exist somewhere on the map, but are unsure where. Then, that investigator takes the set-aside concealed mini-card that matches that enemy, along with X decoys (where X is defined by that enemy’s concealed X value), shuffles them facedown, and puts them into play distributed as evenly as possible among each location in play, starting with the locations nearest to them. Then, at each of those locations that already had 1 or more concealed mini-cards, they shuffle each of them facedown as well.</p>
+
+<p><i>For example: Amina draws Coterie Agent (A), which has "concealed 2." She first spawns the Coterie Agent into the shadows. Then, she takes the set-aside Coterie Agent (A) mini-card, along with 2 decoys, shuffles them facedown, and places one at each of the three locations nearest to her. Then, if any of those locations already had 1 or more concealed mini-cards, she would shuffle each concealed mini-card at those locations, as well.</i></p>
+
+<p>Enemies in the shadows observe the following additional rules:</p>
+
+<ul>
+
+<li>  Enemies in the shadows are considered to be in play, but not at any particular location. They cannot move until they leave the shadows.</li>
+
+<li>  Enemies in the shadows can qualify as the "nearest" enemy, but only if there are no other enemies in play at any location.</li>
+
+<li>  Enemies in the shadows cannot be damaged or leave play via player card effects.</li>
+
+</ul>
+
+<h2 id="Concealed_Mini_Cards" style="color:red">Concealed Mini-Cards (added in <em>The Scarlet Keys</em>)</h2>
+
+<p>While in play, concealed mini-cards represent the possible location of an enemy in the shadows. In order to deal with such an enemy, its true location must first be discovered by exposing its mini-card. This can be done via one of three methods: fighting, evading, or investigating.</p>
+
+<ul>
+
+<li>  Concealed mini-cards are not enemies and cannot be engaged like enemies. However, any investigator at the same location as a concealed mini-card may attempt to expose it by successfully attacking it or evading it (as if it were an engaged enemy), or by successfully investigating its location. The difficulty to successfully attack or evade a concealed mini-card is equal to the shroud value of its location.</li>
+
+<ul>
+
+<li>  An investigator may also use a card effect that automatically evades an enemy, deals damage to an enemy, or discovers a clue at a location in order to instead expose a concealed mini-card.</li>
+
+</ul>
+
+<li>  If an investigator chooses to expose a concealed mini-card, that effect replaces the standard effects of the action or ability that exposed it. <i>(i.e., if an enemy’s mini-card is exposed by evasion or damage, the matching enemy is not evaded, nor does it take damage. If a mini-card is exposed by discovering clues or investigating, no clues are discovered.)</i></li>
+
+<li>  If a concealed mini-card is exposed (via any of the above methods), flip it to its revealed side.
+
+<ul>
+
+<li>  If it is a decoy, set it aside, out of play, with no effect.</li>
+
+<li>  If it is an enemy’s mini-card, that enemy is now exposed. Place the matching enemy in the shadows at that mini-card’s location, then set that mini-card aside, out of play. <i>(That enemy is no longer in the shadows, and is now at the location where its mini-card was located).</i> Then, if there are no other enemies in the shadows, set all remaining concealed mini-cards in play aside, out of play.</li>
+
+</ul>
+
+<li>  Only one concealed mini-card may be exposed per effect unless explicitly stated. (i.e., an effect that deals 3 damage to each enemy at a location does not expose all concealed mini-cards at that location; only one.)</li>
+
+</ul>
+
+<p><i>For example: There is a Coterie Agent and a Coterie Assassin in the shadows. There is a concealed mini-card at Kymani’s location and another concealed mini-card at a connecting location. (1) First, Kymani plays an event that discovers a clue at their location, but instead of discovering a clue, they choose to expose the concealed mini-card at their location, flipping it over. That mini-card is a decoy, and is set aside without effect. (2) Next, they move to the connecting location with the other concealed mini-card and attempt to expose it using an evade action. They succeed and flip the mini-card over... revealing the Coterie Assassin’s mini-card! (3) The Coterie Assassin’s mini-card is set aside, and the Coterie Assassin in the shadows is moved to Kymani’s location, engaging them. Because there is another enemy in the shadows, they do not remove any of the other concealed mini-cards from play.</i></p>
+
 <h2 id="Constant_Abilities">Constant Abilities</h2>
 
 <p>See "<a href="#Abilities_Constant">Ability</a>" on page 2.</p>
@@ -1773,6 +1830,50 @@
 <p>When an investigator takes control of a key, they flip it faceup (if it is facedown) and place it on their investigator card. If an investigator who controls one or more keys is eliminated, place each of their keys on their location. As an [action] ability, an investigator may give any number of their keys to another investigator at the same location.</p>
 
 <p><b>Keys have no inherent game effect.</b> However, some card effects may change depending on which keys an investigator controls. Additionally, keys may sometimes be required in order to progress during a scenario.</p>
+
+<h2 id="Keys2" style="color:red">Keys (added in <em>The Scarlet Keys</em>)</h2>
+
+<p><i>The Scarlet Keys</i> campaign features a new cardtype: keys. Keys are powerful artifacts that may be "shifted" to either aid or hinder investigators, depending on whom they are attached to and whether their <b><i>Stable</i</b> or <b><i>Unstable</i></b> side is faceup.</p>
+
+<ul>
+
+<li>  During the resolution of a scenario, a key may become bound to a single bearer, whose name is marked in the Campaign Log. A key may be bound to an investigator, a story asset, or an enemy.</li>
+
+<li>  A key always enters play attached to its bearer (as marked in the Campaign Log). At the start of each scenario, each investigator who is the bearer of 1 or more keys attaches those keys to their investigator card. Whenever a story asset or enemy enters play, if it is the bearer of 1 or more keys, those keys also enter play attached to their bearer.</li>
+
+<ul>
+
+<li>  If a key’s bearer is an investigator or a story asset, it enters play <b><i>Stable</i></b> side faceup.</li>
+
+<li>  If a key’s bearer is an enemy, it enters play <b><i>Unstable</i></b> side faceup.</li>
+
+</ul>
+
+<li> A key cannot leave play unless its bearer leaves play. If the bearer of 1 or more keys leaves play, each key they control is set aside, out of play. <i>(Those keys do, however, remain bound to their bearer for future scenarios unless explicitly noted otherwise.)</i></li>
+
+<li>  While a key is attached to an investigator, that investigator may trigger its shift ability during any player window as a [free] ability. This is called "shifting" the key. As part of this ability’s resolution, it will instruct the investigator to flip the key to its other side, so its other shift ability is active. The investigator will then have to perform the shift ability on its <b><i>Unstable</i></b> side in order to flip it back over again.<li>
+
+<ul>
+
+<li>  While a key is attached to a story asset, it may be shifted by any investigator who controls that asset in the same way.</li>
+
+<li>  Each key (by title) attached to an investigator or story asset can only be shifted once per round.</li>
+
+</ul>
+
+<li>  While a key is under an enemy’s control, its shift ability only resolves when a card or game effect instructs an investigator to shift that key, after which it remains <b><i>Unstable</i></b> side faceup.
+
+<ul>
+
+<li>  A key attached to an enemy cannot be flipped to its <b><i>Stable</i></b> side.</li>
+
+<li>  There is no limit to the number of times a key attached to an enemy can be shifted.</li>
+
+</ul>
+
+<li>  Some card effects may directly flip a key attached to an investigator or story asset from its <b><i>Stable</i></b> side to its <b><i>Unstable</i></b> side, or vice versa. This is not the same as shifting a key, and does not resolve its shift ability.</li>
+
+</ul>
 
 <h2 id="Keywords">Keywords</h2>
 
