--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -153,8 +153,8 @@
 	<li><a href="#Investigation_Phase">Investigation Phase</a></li>
 	<li><a href="#Investigator_Deck">Investigator Deck</a></li>
 	<li><a href="#Joes_Hunch_Deck">Joe's "Hunch Deck"</a></li>
-	<li><a href="#Keys">Keys</a></li>
-	<li><a href="#Keys2">Keys (Cardtype)</a></li>
+	<li><a href="#Keys">Keys <i>(Innsmouth)</i></a></li>
+	<li><a href="#Keys2">Keys <i>(Scarlet Keys)</i></a></li>
 	<li><a href="#Keywords">Keywords</a></li>
 	<li><a href="#Killed_Insane_Investigators">Killed/Insane Investigators</a></li>
 	<li><a href="#Lasting_Effects">Lasting Effects</a></li>
@@ -1809,7 +1809,7 @@
 
 <p>As a private eye, Joe Diamond has learned to follow his instincts, and therefore he has a separate hunch deck, which is constructed during step 4 of the setup of each scenario. The cards in this hunch deck are chosen from Joe's 40-card deck and therefore count toward his total deck size. With the exception of these setup instructions, all references to Joe's "deck" refer to Joe's standard investigator deck and not his hunch deck. Joe's hunch deck has no discard pile; cards from your hunch deck are discarded to your standard discard pile when played.</p>
 
-<h2 id="Keys" style="color:red">Keys (added in <em>The Innsmouth Conspiracy</em>)</h2>
+<h2 id="Keys" style="color:red">Keys (token) (added in <em>The Innsmouth Conspiracy</em>)</h2>
 
 <p> This expansion introduces key tokens that represent important objects or pieces of information that can be claimed and used during scenarios.</p>
 
@@ -1831,7 +1831,7 @@
 
 <p><b>Keys have no inherent game effect.</b> However, some card effects may change depending on which keys an investigator controls. Additionally, keys may sometimes be required in order to progress during a scenario.</p>
 
-<h2 id="Keys2" style="color:red">Keys (added in <em>The Scarlet Keys</em>)</h2>
+<h2 id="Keys2" style="color:red">Keys (cardtype) (added in <em>The Scarlet Keys</em>)</h2>
 
 <p><i>The Scarlet Keys</i> campaign features a new cardtype: keys. Keys are powerful artifacts that may be "shifted" to either aid or hinder investigators, depending on whom they are attached to and whether their <b><i>Stable</i</b> or <b><i>Unstable</i></b> side is faceup.</p>
 
