--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -90,6 +90,9 @@
 	<li><a href="#Control">Control</a></li>
 	<li><a href="#Copy">Copy</a></li>
 	<li><a href="#Costs">Costs</a></li>
+		<ul>
+		<li><a href="#Ignoring_All_Costs">"Ignoring all costs"</a></li>
+		</ul>
 	<li><a href="#Dealing_Damage_Horror">Dealing Damage/Horror</a></li>
 	<li><a href="#Deck">Deck</a></li>
 	<li><a href="#Deckbuilding">Deckbuilding</a></li>
@@ -210,6 +213,9 @@
 	<li><a href="#Resources">Resources</a></li>
 	<li><a href="#Retaliate">Retaliate</a></li>
 	<li><a href="#Revelation">Revelation</a></li>
+		<ul>
+		<li><a href="#Revelation_Ability_Priority">Revelation Ability Priority</a></li>
+		</ul>
 	<li><a href="#Sanity_and_Horror">Sanity and Horror</a></li>
 	<li><a href="#Seal">Seal</a></li>
 	<li><a href="#Search">Search</a></li>
@@ -1067,6 +1073,12 @@
 <li>  If an investigator takes damage or horror as a cost and reassigns any of it to an asset, the cost is still considered paid.</li>
 
 </ul>
+
+<h3 id="Ignoring_All_Costs" style="color:blue">"Ignoring all costs" (added in FAQ, section 'Card Ability Interpretation', point 2.24)</h3>
+
+<p>Some cards like Knowledge is Power or Word of Woe allow an investigator to play a card or activate an ability on an asset, "ignoring all costs." These effects only ignore the costs of initiating an ability. They do not ignore additional costs that must be paid when resolving that ability — in other words, anything "before the colon" is ignored, but any additional costs "after the colon" must be paid as normal.</p>
+
+<p><i>For example, if an investigator uses Knowledge is Power to activate the [action] ability on Old Book of Lore, Knowledge is Power allows you to ignore the action cost and exhausting of Old Book of Lore to activate its ability and search your deck for a card, but does not waive the additional cost to spend a secret to play that card. Likewise, playing Word of Woe waives the action cost to activate the ability on Earthly Serenity, but does not waive the cost to spend charges to heal an investigator at your location.</i></p>
 
 <h2 id="Dealing_Damage_Horror">Dealing Damage/Horror</h2>
 
@@ -2439,6 +2451,10 @@
 <li>  When a weakness card enters an investigator's hand, that investigator must immediately resolve all revelation abilities on the card as if it were just drawn.</li>
 
 </ul>
+
+<h3 id="Revelation_Ability_Priority" style="color:blue">Revelation Ability Priority (added in FAQ, section 'Card Ability Interpretation', point 2.25)</h3>
+
+<p>If an investigator has both a <b><i>Dilemma</i></b> card and a weakness and/or encounter card in their hand, the weakness and/or encounter card must be resolved first.</p>
 
 <h2 id="Sanity_and_Horror">Sanity and Horror</h2>
 
