--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -1036,6 +1036,16 @@
 
 <p><i>For example: There is a Coterie Agent and a Coterie Assassin in the shadows. There is a concealed mini-card at Kymani’s location and another concealed mini-card at a connecting location. (1) First, Kymani plays an event that discovers a clue at their location, but instead of discovering a clue, they choose to expose the concealed mini-card at their location, flipping it over. That mini-card is a decoy, and is set aside without effect. (2) Next, they move to the connecting location with the other concealed mini-card and attempt to expose it using an evade action. They succeed and flip the mini-card over... revealing the Coterie Assassin’s mini-card! (3) The Coterie Assassin’s mini-card is set aside, and the Coterie Assassin in the shadows is moved to Kymani’s location, engaging them. Because there is another enemy in the shadows, they do not remove any of the other concealed mini-cards from play.</i></p>
 
+<p><span style="color:blue">(Added in FAQ, section 'Frequently Asked Questions')</span> <b>Frequently asked Concealed Mini-Card questions:</b></p>
+
+<ol>
+
+<li>  <i>How many concealed mini-cards can I expose if I resolve an ability with multiple effects, such as Power Word with its Tonguetwister or Thrice Spoken commands, or Breaking and Entering?</i> An ability that contains multiple effects able to expose an enemy can have just one of those effects replaced with the exposure. A concealed mini-card may be exposed by successfully attacking it, successfully/automatically evading it, successfully investigating its location, automatically dealing damage to it, or automatically discovering a clue at its location. Any of these effects can be replaced with the exposing of one mini-card, and only one mini-card at a time can be exposed by such an effect. For example, Breaking and Entering has two effects: investigating and, if successful, automatically evading an enemy. Either of these effects may be replaced with exposing a concealed mini-card, but not both. Likewise, if you issue the Betray and Confess commands via Power Word’s Tonguetwister upgrade, only the damage or the clue discovery may be replaced with an exposure; the other effect is resolved as normal. This holds true even if issuing two commands to 3 enemies via Thrice Spoken: only 1 single concealed mini-card may be exposed even when resolving the effect for 3 different enemies.</li>
+
+<li>  <i>Does a concealed mini-card count as an enemy for the purposes of card effects that depend on having an enemy at my location?</i>  No. A concealed mini-card can be attacked or evaded "as if it were an engaged enemy", but for all other effects, it is not considered an enemy at the location. For example, if Trish Scarborough discovers a clue at a location with a concealed mini-card but no enemies, she is unable to trigger her [reaction] ability because the clue was not discovered at a location "with an enemy." Additionally, card effects that require an investigator to "choose an enemy", such as Expose Weakness, cannot be used to target a concealed mini-card.</li>
+
+</ol>
+
 <h2 id="Constant_Abilities">Constant Abilities</h2>
 
 <p>See "<a href="#Abilities_Constant">Ability</a>" on page 2.</p>
