--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -98,7 +98,9 @@
 		<li><a href="#Ignoring_All_Costs">"Ignoring all costs"</a></li>
 		</ul>
 	<li><a href="#Customizable">Customizable</a></li>
+	<li><a href="#Day_and_Night">Day and Night</a></li>
 	<li><a href="#Dealing_Damage_Horror">Dealing Damage/Horror</a></li>
+
 	<li><a href="#Deck">Deck</a></li>
 	<li><a href="#Deckbuilding">Deckbuilding</a></li>
 		<ul>
